Arreglo ancho seccion paquetes

--- a/index.html
+++ b/index.html
@@ -95,30 +95,30 @@
         <main>
             <!-- SECCION PRESENTACION -->
             <section class="presentation-video">
-                    <video controls muted autoplay loop poster="" class="video">
-                        <source src="./media/videos/cataratas.mp4" type="video/mp4">
-                        Tu navegador no soporta la reproducción de video.
-                            <track src="./media/videos/cataratas.vtt"
-                                        kind="subtitles"
-                                            srclang="es"
-                                                label="Español"
-                                                    default />
-                                                        <track src="./media/videos/cataratas.vtt"
-                                                            kind="subtitles"
-                                                                srclang="en"
-                                                                    label="Inglés" />
-                    </video>
-                    <br />
-                    <div class="audio">
-                        <audio controls muted>
-                            <source src="./media/sonidos/waterfall-sounds.mp3" type="audio/mpeg">
-                            Tu navegador no soporta la reproducción de audio.
-                        </audio>
-                    </div>
-                    <h1 class="heading"><span>LOS</span> <span>MEJORES</span> <span>LUGARES</span> <span>DE</span> <span>ARGENTINA</span></h1>
-                    <p>Buscas salir de tu rutina? Escapate a alguno de estos fantásticos lugares.<br />
-                        <span>Vive aventuras emocionantes e inigualables. Crea recuerdos inolvidables!</span>
-                    </p>
+                <video controls muted autoplay loop poster="" class="video">
+                    <source src="./media/videos/cataratas.mp4" type="video/mp4">
+                    Tu navegador no soporta la reproducción de video.
+                        <track src="./media/videos/cataratas.vtt"
+                                    kind="subtitles"
+                                        srclang="es"
+                                            label="Español"
+                                                default />
+                                                    <track src="./media/videos/cataratas.vtt"
+                                                        kind="subtitles"
+                                                            srclang="en"
+                                                                label="Inglés" />
+                </video>
+                <br />
+                <div class="audio">
+                    <audio controls muted>
+                        <source src="./media/sonidos/waterfall-sounds.mp3" type="audio/mpeg">
+                        Tu navegador no soporta la reproducción de audio.
+                    </audio>
+                </div>
+                <h1 class="heading"><span>LOS</span> <span>MEJORES</span> <span>LUGARES</span> <span>DE</span> <span>ARGENTINA</span></h1>
+                <p>Buscas salir de tu rutina? Escapate a alguno de estos fantásticos lugares.<br />
+                    <span>Vive aventuras emocionantes e inigualables. Crea recuerdos inolvidables!</span>
+                </p>
             </section>
             <!-- SECCION DESTINOS -->
             <section class="destinations" id="destinos">
@@ -132,7 +132,6 @@
                     <span>o</span>
                     <span>s</span>
                 </h2>
-
                 <div class="box-container">
                     <div class="box">
                         <img src="./media/imgs/photos/bari00.jpg" alt="imagen de Bariloche">
@@ -149,11 +148,11 @@
                                 </div>
                                 <p>(Reviews: 2895)</p>
                             </div>
-                            <div class="price"> 5 Noches - Desde: $529.000 / pers. Antes: <span>$599.000 / pers</span></div>
+                            <div class="price"> 5 Noches - Desde: $529.000 / pers. Antes: <span>$599.000 / pers</span>
+                            </div>
                             <a href="./xtras/book.html" class="btn">Book now</a>
                         </div>
                     </div>
-
                     <div class="box">
                         <img src="./media/imgs/photos/cala00.jpg" alt="Imagen de El Calafate">
                         <div class="content">
@@ -169,11 +168,11 @@
                                 </div>
                                 <p>(Reviews: 1356)</p>
                             </div>
-                            <div class="price"> 5 Noches - Desde: $499.000 / pers. Antes: <span>$649.000 / pers</span></div>
+                            <div class="price"> 5 Noches - Desde: $499.000 / pers. Antes: <span>$649.000 / pers</span>
+                            </div>
                             <a href="./xtras/book.html" class="btn">Book now</a>
                         </div>
                     </div>
-
                     <div class="box">
                         <img src="./media/imgs/photos/cata00.jpg" alt="Imagen de Cataratas del Iguazu">
                         <div class="content">
@@ -189,11 +188,11 @@
                                 </div>
                                 <p>(Reviews: 2131)</p>
                             </div>
-                            <div class="price">5 Noches - Desde: $479.000 / pers. Antes: <span>$599.000 / pers</span></div>
+                            <div class="price">5 Noches - Desde: $479.000 / pers. Antes: <span>$599.000 / pers</span>
+                            </div>
                             <a href="./xtras/book.html" class="btn">Book now</a>
                         </div>
                     </div>
-
                     <div class="box">
                         <img src="./media/imgs/photos/cord01.jpg" alt="Imagen de Cordoba">
                         <div class="content">
@@ -213,7 +212,6 @@
                             <a href="./xtras/book.html" class="btn">Book now</a>
                         </div>
                     </div>
-
                     <div class="box">
                         <img src="./media/imgs/photos/mdpl00.jpg" alt="Imagen de Mar del Plata">
                         <div class="content">
@@ -229,7 +227,8 @@
                                 </div>
                                 <p>(Reviews: 1972)</p>
                             </div>
-                            <div class="price">5 Noches - Desde: $249.000 / pers. Antes: <span>$349.000 / pers</span></div>
+                            <div class="price">5 Noches - Desde: $249.000 / pers. Antes: <span>$349.000 / pers</span>
+                            </div>
                             <a href="./xtras/book.html" class="btn">Book now</a>
                         </div>
                     </div>
@@ -237,9 +236,7 @@
                             <img src="./media/imgs/photos/mend00.jpg" alt="Imagen de Mendoza">
                             <div class="content">
                                 <h3><i class="fas fa-map-marker-alt"></i> Mendoza</h3>
-                                <p>Mendoza, ubicada al pie de la cordillera de los Andes en el oeste argentino, tiene una identidad distintiva en el paisaje cuyano. Ideal para el enoturísmo y la aventura.
-
-                                </p>
+                                <p>Mendoza, ubicada al pie de la cordillera de los Andes en el oeste argentino, tiene una identidad distintiva en el paisaje cuyano. Ideal para el enoturísmo y la aventura.</p>
                                 <div class="reviews">
                                 <div class="stars">
                                     <i class="fas fa-star"></i>
@@ -271,7 +268,8 @@
                                 </div>
                                 <p>(Reviews: 1218)</p>
                             </div>
-                            <div class="price">5 Noches - Desde: $579.000 / pers. Antes: <span>$699.000 / pers</span></div>
+                            <div class="price">5 Noches - Desde: $579.000 / pers. Antes: <span>$699.000 / pers</span>
+                            </div>
                             <a href="./xtras/book.html" class="btn">Book now</a>
                         </div>
                     </div>
@@ -290,7 +288,8 @@
                                 </div>
                                 <p>(Reviews: 1044)</p>
                             </div>
-                            <div class="price">5 Noches - Desde: $379.000 / pers. Antes: <span>$349.000 / pers</span> </div>
+                            <div class="price">5 Noches - Desde: $379.000 / pers. Antes: <span>$349.000 / pers</span>
+                            </div>
                             <a href="./xtras/book.html" class="btn">Book now</a>
                         </div>
                     </div>
@@ -309,7 +308,8 @@
                                 </div>
                                 <p>(Reviews: 1987)</p>
                             </div>
-                            <div class="price">5 Noches - Desde: $599.000 / pers. Antes: <span>$749.000 / pers</span> </div>
+                            <div class="price">5 Noches - Desde: $599.000 / pers. Antes: <span>$749.000 / pers</span>
+                            </div>
                             <a href="./xtras/book.html" class="btn">Book now</a>
                         </div>
                     </div>
@@ -317,7 +317,6 @@
             </section>
             <!-- SECCION PAQUETES -->
            <section class="packages" id="paquetes">
-
                 <h2 class="heading" id="titulo-pack">
                     <span>P</span>
                     <span>a</span>
@@ -328,7 +327,6 @@
                     <span>e</span>
                     <span>s</span>
                 </h2>
-
                 <div class="box-container"> <!-- class="package-content" -->
                     <div class="box-pack">
                         <div class="img-pack" >
@@ -396,9 +394,8 @@
                     <div class="box">
                         <i class='fas fa-hotel'></i>
                         <h3>Hoteles / Alojamiento</h3>
-                    <p>Conseguimos alojamiento en una gran variedad de lugares, incluidos hoteles, spas, resorts, hosterias, airbnb's y mas!
-
-                    </p>
+                        <p>Conseguimos alojamiento en una gran variedad de lugares, incluidos hoteles, spas, resorts, hosterias, airbnb's y mas!
+                        </p>
                     </div>
                     <div class="box">
                         <i class="fas fa-utensils"></i>
@@ -406,7 +403,7 @@
                         <p>Comidas de todos los origenes: italiana, mexicana, internacional, platos típicos. Reconocidos Chefs en restaurants de gran reputación. Maridaje de vinos.</p>
                     </div>
                     <div class="box">
-                    <i class="fas fa-bullhorn"></i>
+                        <i class="fas fa-bullhorn"></i>
                         <h3>Guias de turismo</h3>
                         <p>Guías expertos que hablan varios idiomas y conocen rincones, leyendas, historias y datos curiosos, te harán pasar momentos inolvidables!</p>
                     </div>
@@ -426,14 +423,12 @@
                         <i class="fas fa-globe-asia"></i>
                         <h3>Asistencia 24/7</h3>
                         <p>Viajá tranquilo. Estaras siempre acompañado! Tendrás Asistencia en varios idiomas ante problemas con vuelos, inconvenientes médicos y otros inprevistos.
-
                         </p>
                     </div>
                 </div>
             </section>
             <!--  SECCION RESEÑAS  -->
             <section class="reviews" id="resenas" >
-
                 <h1 class="heading">
                     <span>R</span>
                     <span>e</span>
@@ -461,7 +456,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="item2">
                     <div class="box">
                         <img src="./media/imgs/photos/z_review2_maria.jpg"  width="70%"  alt="">
@@ -480,7 +474,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="item3">
                     <div class="box">
                         <img src="./media/imgs/photos/z_review3_luciana.jpg"  width="70%"  alt="">
@@ -551,7 +544,7 @@
                     </div> </div>
                 <div class="item7"><div class="box">
                         <img src="./media/imgs/photos/z_review7_esteban.jpg"  width="70%"  alt="">
-                                        <h3>Esteban Ocon</h3>
+                        <h3>Esteban Ocon</h3>
                         <p>Siempre fui fanático de los viajes que me conectan con la naturaleza, pero lo que viví en Puerto Madryn fue mucho más que eso. Fue un viaje que me dejó con la boca abierta y el corazón lleno.
                             Llegué a esta ciudad costera en pleno otoño, con la idea de ver ballenas, pero terminé descubriendo un mundo marino y terrestre que no imaginaba. Desde el primer día, el paisaje me impactó: el mar calmo del Golfo Nuevo, el contraste del desierto patagónico, los cielos inmensos… Es un lugar donde todo parece estar en su estado más puro.</p>  <div class="stars">
                             <i class="fas fa-star"></i>
@@ -566,7 +559,7 @@
                     </div> </div>
                 <div class="item8"> <div class="box">
                         <img src="./media/imgs/photos/z_review8_michele.jpg"  width="70%"  alt="">
-                                        <h3>Michele Lenox</h3>
+                        <h3>Michele Lenox</h3>
                         <p>Hace tiempo que tenía a Argentina en mi lista de destinos soñados, pero en lugar de ir directo al sur o a Buenos Aires, decidí comenzar por el norte… y fue una decisión perfecta. Mi visita a Salta fue una mezcla de cultura, paisajes increíbles y gente maravillosa.
                             Apenas llegué, me encantó la ciudad. La arquitectura colonial, las calles adoquinadas, las iglesias antiguas como la Catedral y San Francisco... todo tiene un aire tranquilo, casi mágico. Me quedé en un hotel pequeño en el centro y todas las tardes salía a caminar por las plazas mientras el sol bajaba detrás de los cerros.</p> <div class="stars">
                             <i class="fas fa-star"></i>
@@ -581,7 +574,7 @@
                     </div></div>
                 <div class="item9"> <div class="box">
                     <img src="./media/imgs/photos/z_review9_zoe.jpg"  width="70%"  alt="">
-                                        <h3>Zoe Assane</h3>
+                    <h3>Zoe Assane</h3>
                     <p>Siempre tuve una fascinación por los extremos, por esos lugares que parecen estar en los márgenes del mapa. Por eso, viajar a Ushuaia, la ciudad más austral del mundo, fue cumplir un sueño que tenía desde hace años. Y la experiencia superó todo lo que imaginé.
                     Aterrizar en Ushuaia es una aventura en sí misma. Desde la ventana del avión vi montañas nevadas, bosques infinitos y el canal Beagle recibiéndonos como un espejo de agua helada. El aire es distinto allá abajo, más puro, más limpio… más vivo.</p> <div class="stars">
                         <i class="fas fa-star"></i>
@@ -608,7 +601,6 @@
                     <span>a</span>
                 </h1>
                 <div class="grid-container" width="100%">
-  
                     <div class="item1" >
                         <div class="card">
                             <div class="title">
@@ -730,7 +722,7 @@
             <a href="#" class="">Volver</a>
         </main>
         <footer>
-                    <!-- Footer Start -->
+                    <!-- FOOTER -->
             <div class="container-fluid bg-dark text-white-50 py-5 px-sm-3 px-lg-5" >
 
                 <div class="row pt-5">
